add second page

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,7 +1,10 @@
 //fonts
-$main-font-family:'HelveticaRegular', Helvetica, Arial;
+$main-font-family: Muli, sans-serif;
 $additional-font-family:'Old Standard TT', serif;
+
 
 //colors
 $text-color: #2F2E2E;
 $active-color: grey;
+
+$container-width: 950px
