--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,12 +6,17 @@
 }
 
 body {
+  font: {
+    family: $main-font-family;
+    size: 18px;
+  }
   font-family: $main-font-family;
+  color: $text-color;
   margin: 0;
 }
 
 .container {
-  max-width: 950px;
+  max-width: $container-width;
   margin: auto;
 }
 
@@ -40,7 +45,7 @@ header {
   }
 }
 
-.icon-main-menu {
+.icon-header {
   display: inline-block;
   padding-left: 11px;
   vertical-align: bottom;
@@ -51,14 +56,13 @@ header {
   ul {
     display: inline-block;
     font-family: $additional-font-family;
-    padding-left: 62px;
     li {
       display: inline-block;
       a {
         text-decoration: none;
         color: $text-color;
         font-size: 1.1rem;
-        padding: 12px;
+        padding: 5px;
         &:hover {
           color: $active-color;
         }
@@ -125,14 +129,13 @@ header {
   position: relative;
   text-align: center;
   width: 100%;
-  height: 800px;
-  overflow: hidden;
   video {
     width: 100%;
+    display: block;
   }
   .title {
     position: absolute;
-    top: 0%;
+    top: 0;
     color: white;
     text-transform: uppercase;
     font: {
@@ -140,6 +143,28 @@ header {
       size: 4vw;
     }
   }
+  .double-line {
+    position: absolute;
+    top: 0;
+    border-color: white;
+  }
+}
+
+.double-line {
+  border-top: 2px solid $text-color;
+  border-bottom: 2px solid $text-color;
+  height: 10px;
+  width: 40px;
+}
+
+h1,
+p {
+  color: $text-color;
+}
+
+h1 {
+  font-family: $additional-font-family;
+  font-weight: 100;
 }
 
 @media screen and (min-width: 768px) {
@@ -148,6 +173,9 @@ header {
     float: right;
   }
   #video-container {
+
+    max-height: 850px;
+    overflow: hidden;
     .title {
       font-size: 3vw;
     }
@@ -162,63 +190,43 @@ header {
       display: none;
     }
   }
+  .information {
+    width: 50%;
+    max-width: 512px;
+    padding: 0 30px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  .chef-img {
+    background-image: url("https://static.wixstatic.com/media/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg/v1/fill/w_1066,h_682,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_a5a164acd00a4ae7940be550e4915303.webp");
+    width: 50%;
+    background-size: cover;
+    background-position: 90%;
+    height: 600px;
+    display: inline-block;
+    vertical-align: middle;
+
+  }
 }
 
 @media screen and (min-width: 600px) {
-.main-menu {
-  .menu {
-    display: inline-block;
+  .main-menu {
+    .menu {
+      display: inline-block;
+    }
+    ul {
+      padding-left: 62px;
+      li {
+        a {
+          padding: 12px;
+        }
+      }
+    }
   }
-}
   .small-menu {
     .small-menu--menu {
       display: none;
     }
   }
+
 }
-
-////for mobile phones
-//[class*='col-'] {
-//  width: 100%;
-//}
-//
-////for tablets
-//@media only screen and (min-width: 600px) {
-//  .col-m-1 {width: 8.33%;}
-//  .col-m-2 {width: 16.66%;}
-//  .col-m-3 {width: 25%;}
-//  .col-m-4 {width: 33.33%;}
-//  .col-m-5 {width: 41.66%;}
-//  .col-m-6 {width: 50%;}
-//  .col-m-7 {width: 58.33%;}
-//  .col-m-8 {width: 66.66%;}
-//  .col-m-9 {width: 75%;}
-//  .col-m-10 {width: 83.33%;}
-//  .col-m-11 {width: 91.66%;}
-//  .col-m-12 {width: 100%;}
-//}
-//
-////For desktop
-//@media only screen and (min-width: 768px) {
-//  .col-1 {width: 8.33%;}
-//  .col-2 {width: 16.66%;}
-//  .col-3 {width: 25%;}
-//  .col-4 {width: 33.33%;}
-//  .col-5 {width: 41.66%;}
-//  .col-6 {width: 50%;}
-//  .col-7 {width: 58.33%;}
-//  .col-8 {width: 66.66%;}
-//  .col-9 {width: 75%;}
-//  .col-10 {width: 83.33%;}
-//  .col-11 {width: 91.66%;}
-//  .col-12 {width: 100%;}
-//}
-//
-//
-////for mobile phones
-//@media only screen and (max-width: 768px) {
-//  [class*='col-'] {
-//    width: 100%;
-//  }
-//}
-
