--- a/sass/main.css
+++ b/sass/main.css
@@ -10,10 +10,11 @@ body {
 
 .container {
   max-width: 950px;
-  margin: auto; }
+  margin: auto;
+  margin-bottom: 18px; }
 
 .container-main-menu {
-  margin-bottom: 30px;
+  margin-bottom: 5px;
   margin-top: 30px; }
 
 header {
@@ -38,14 +39,15 @@ header {
 
 .main-menu ul {
   display: inline-block;
-  font-family: "Old Standard TT", serif; }
+  font-family: "Old Standard TT", serif;
+  margin-bottom: 0; }
   .main-menu ul li {
     display: inline-block; }
     .main-menu ul li a {
       text-decoration: none;
       color: #2F2E2E;
-      font-size: 1.1rem;
-      padding: 5px; }
+      font-size: 1rem;
+      padding: 3px; }
       .main-menu ul li a:hover {
         color: grey; }
 
@@ -56,7 +58,6 @@ header {
   border-radius: 3px;
   background: none;
   padding: 8px 13px;
-  margin-top: 7px;
   margin-right: 15px; }
 
 .main-menu .small-menu {
@@ -120,7 +121,28 @@ h1 {
   font-family: "Old Standard TT", serif;
   font-weight: 100; }
 
+.chef-img {
+  background-image: url("https://static.wixstatic.com/media/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg/v1/fill/w_1066,h_682,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_a5a164acd00a4ae7940be550e4915303.webp");
+  height: 200px;
+  background-size: cover; }
+
+.information {
+  font-size: 0.9rem;
+  padding: 20px; }
+  .information p {
+    padding-top: 15px; }
+
+@media screen and (min-width: 768px) and (max-width: 853px) {
+  .menu-information {
+    font-size: 1.9vw; } }
 @media screen and (min-width: 768px) {
+  .main-menu .menu {
+    display: inline-block; }
+  .main-menu ul {
+    padding-left: 62px; }
+    .main-menu ul li a {
+      padding: 12px; }
+
   .icons {
     display: inline-block;
     float: right; }
@@ -133,16 +155,28 @@ h1 {
 
   .main-menu button.menu {
     display: none; }
+  .main-menu .small-menu {
+    border-color: transparent; }
 
-  .small-menu .small-menu--menu {
+  .small-menu .small-menu--menu,
+  .small-menu .small-menu--icons {
     display: none; }
 
+  .container-main-menu {
+    margin-bottom: 30px; }
+
+  .restaurant-menu .container {
+    padding-top: 90px; }
+
+  .information-container {
+    height: 600px; }
+
   .information {
+    font-size: 1.2rem;
     width: 50%;
     max-width: 512px;
-    padding: 0 30px;
-    display: inline-block;
-    vertical-align: middle; }
+    padding: 100px 0 0 60px;
+    display: inline-block; }
 
   .chef-img {
     background-image: url("https://static.wixstatic.com/media/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg/v1/fill/w_1066,h_682,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_a5a164acd00a4ae7940be550e4915303.webp");
@@ -151,8 +185,38 @@ h1 {
     background-position: 90%;
     height: 600px;
     display: inline-block;
-    vertical-align: middle; } }
-@media screen and (min-width: 600px) {
+    float: left; }
+
+  .restaurant-menu {
+    background-image: url("https://static.wixstatic.com/media/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.jpg/v1/fill/w_1863,h_828,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.webp");
+    background-size: cover;
+    height: 800px;
+    width: 100%; }
+
+  .menus {
+    text-align: center; }
+
+  .menu-information {
+    display: inline-block;
+    background-color: white;
+    width: 30%;
+    text-align: center;
+    margin: 11px; }
+    .menu-information img {
+      height: 185px; }
+    .menu-information a {
+      text-decoration: none;
+      color: #2F2E2E; }
+    .menu-information .double-line {
+      margin: auto; }
+    .menu-information h1 {
+      padding: 0 60px 0 60px; }
+    .menu-information p {
+      padding-top: 30px; }
+
+  .menu-img {
+    padding-top: 60px; } }
+@media screen and (min-width: 600px) and (max-width: 768px) {
   .main-menu .menu {
     display: inline-block; }
   .main-menu ul {
@@ -161,6 +225,47 @@ h1 {
       padding: 12px; }
 
   .small-menu .small-menu--menu {
-    display: none; } }
+    display: none; }
+
+  .main-menu button.menu {
+    margin-top: 7px; }
+
+  .container {
+    margin-bottom: 0; }
+
+  .container-main-menu {
+    margin-bottom: 30px; }
+
+  .chef-img {
+    background-image: url("https://static.wixstatic.com/media/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg/v1/fill/w_1066,h_682,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_a5a164acd00a4ae7940be550e4915303.webp");
+    height: 330px;
+    background-size: cover; }
+
+  .information {
+    font-size: 1.2rem;
+    padding: 30px; }
+    .information p {
+      padding-top: 30px; }
+
+  .menus {
+    text-align: center; }
+
+  .menu-information {
+    padding: 0 90px;
+    margin: 10px;
+    border-bottom: 1px solid #2F2E2E; }
+    .menu-information .double-line {
+      margin: auto; }
+    .menu-information a {
+      text-decoration: none;
+      color: #2F2E2E; }
+
+  .menu-img {
+    padding-top: 30px; } }
+@media screen and (min-width: 440px) and (max-width: 600px) {
+  .chef-img {
+    background-image: url("https://static.wixstatic.com/media/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg/v1/fill/w_1066,h_682,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_a5a164acd00a4ae7940be550e4915303.webp");
+    height: 280px;
+    background-size: cover; } }
 
 /*# sourceMappingURL=main.css.map */
