--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -7,4 +7,6 @@ $additional-font-family:'Old Standard TT', serif;
 $text-color: #2F2E2E;
 $active-color: grey;
 
-$container-width: 950px
+$container-width: 950px;
+
+$common-padding: 30px;
