--- a/sass/main.css
+++ b/sass/main.css
@@ -11,7 +11,7 @@ body {
 .container {
   max-width: 950px;
   margin: auto;
-  margin-bottom: 18px; }
+  margin-bottom: 15px; }
 
 .container-main-menu {
   margin-bottom: 5px;
@@ -33,9 +33,9 @@ header {
 
 .icon-header {
   display: inline-block;
-  padding-left: 11px;
+  padding-left: 10px;
   vertical-align: bottom;
-  margin-bottom: 4px; }
+  margin-bottom: -3px; }
 
 .main-menu ul {
   display: inline-block;
@@ -51,19 +51,20 @@ header {
       .main-menu ul li a:hover {
         color: grey; }
 
+.main-menu .menu {
+  display: none; }
 .main-menu button.menu {
   display: inline-block;
   float: right;
   border: 1px solid #2F2E2E;
   border-radius: 3px;
   background: none;
-  padding: 8px 13px;
+  padding: 10px 15px;
   margin-right: 15px; }
-
 .main-menu .small-menu {
   text-align: right;
   margin-right: 15px;
-  margin-top: 14px;
+  margin-top: 15px;
   border-top: 1px solid #2F2E2E; }
 
 .small-menu .small-menu--menu {
@@ -71,15 +72,12 @@ header {
   padding-left: 0;
   float: left; }
 
-.main-menu .menu {
-  display: none; }
-
 .invisible {
   display: none; }
 
 .icons {
   display: none;
-  margin-top: 12px; }
+  margin-top: 10px; }
   .icons .icon {
     display: inline-block;
     font-size: 1.4rem; }
@@ -87,6 +85,21 @@ header {
       text-decoration: none;
       color: #2F2E2E;
       padding: 10px; }
+
+.menus {
+  text-align: center; }
+
+.menu-information {
+  font-size: 0.9rem;
+  border-bottom: 1px solid #2F2E2E;
+  padding: 0 15px; }
+  .menu-information .menu-img {
+    padding-top: 30px; }
+  .menu-information .double-line {
+    margin: auto; }
+  .menu-information a {
+    text-decoration: none;
+    color: #2F2E2E; }
 
 #video-container {
   position: relative;
@@ -128,20 +141,17 @@ h1 {
 
 .information {
   font-size: 0.9rem;
-  padding: 20px; }
+  padding: 15px; }
   .information p {
     padding-top: 15px; }
 
-@media screen and (min-width: 768px) and (max-width: 853px) {
-  .menu-information {
-    font-size: 1.9vw; } }
 @media screen and (min-width: 768px) {
   .main-menu .menu {
     display: inline-block; }
   .main-menu ul {
-    padding-left: 62px; }
+    padding-left: 60px; }
     .main-menu ul li a {
-      padding: 12px; }
+      padding: 15px; }
 
   .icons {
     display: inline-block;
@@ -175,7 +185,7 @@ h1 {
     font-size: 1.2rem;
     width: 50%;
     max-width: 512px;
-    padding: 100px 0 0 60px;
+    padding: 90px 0 0 60px;
     display: inline-block; }
 
   .chef-img {
@@ -197,11 +207,13 @@ h1 {
     text-align: center; }
 
   .menu-information {
+    border-color: transparent;
+    font-size: 1.1rem;
     display: inline-block;
     background-color: white;
     width: 30%;
     text-align: center;
-    margin: 11px; }
+    margin: 10px; }
     .menu-information img {
       height: 185px; }
     .menu-information a {
@@ -209,8 +221,8 @@ h1 {
       color: #2F2E2E; }
     .menu-information .double-line {
       margin: auto; }
-    .menu-information h1 {
-      padding: 0 60px 0 60px; }
+    .menu-information h2:last-child {
+      padding: 0 60px; }
     .menu-information p {
       padding-top: 30px; }
 
@@ -220,15 +232,15 @@ h1 {
   .main-menu .menu {
     display: inline-block; }
   .main-menu ul {
-    padding-left: 62px; }
+    padding-left: 60px; }
     .main-menu ul li a {
-      padding: 12px; }
+      padding: 10px; }
 
   .small-menu .small-menu--menu {
     display: none; }
 
   .main-menu button.menu {
-    margin-top: 7px; }
+    margin-top: 10px; }
 
   .container {
     margin-bottom: 0; }
@@ -251,6 +263,7 @@ h1 {
     text-align: center; }
 
   .menu-information {
+    font-size: 1.2rem;
     padding: 0 90px;
     margin: 10px;
     border-bottom: 1px solid #2F2E2E; }
@@ -266,6 +279,10 @@ h1 {
   .chef-img {
     background-image: url("https://static.wixstatic.com/media/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg/v1/fill/w_1066,h_682,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_a5a164acd00a4ae7940be550e4915303.webp");
     height: 280px;
-    background-size: cover; } }
+    background-size: cover; }
+
+  .menu-information {
+    border-bottom: 1px solid #2F2E2E;
+    font-size: 1.2rem; } }
 
 /*# sourceMappingURL=main.css.map */
