--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,10 +6,12 @@
 }
 
 body {
+
   font: {
     family: $main-font-family;
     size: 18px;
   }
+
   font-family: $main-font-family;
   color: $text-color;
   margin: 0;
@@ -18,29 +20,33 @@ body {
 .container {
   max-width: $container-width;
   margin: auto;
-  margin-bottom: 18px;
+  margin-bottom: $common-padding/2;
 }
 
 .container-main-menu {
-  margin-bottom: 5px;
-  margin-top: 30px;
+  margin-bottom: $common-padding/6;
+  margin-top: $common-padding;
 }
 
 header {
   display: inline-block;
+
   font: {
     weight: bold;
     style: italic;
     size: 1.4rem;
     family: $additional-font-family;
   }
+
   a {
     text-decoration: none;
     color: $text-color;
   }
+
   sup {
     font-weight: normal;
   }
+
   .fa {
     font-size: 0.7rem;
   }
@@ -48,23 +54,27 @@ header {
 
 .icon-header {
   display: inline-block;
-  padding-left: 11px;
+  padding-left: $common-padding/3;
   vertical-align: bottom;
-  margin-bottom: 4px;
+  margin-bottom: -$common-padding/10;
 }
 
 .main-menu {
+
   ul {
     display: inline-block;
     font-family: $additional-font-family;
     margin-bottom: 0;
+
     li {
       display: inline-block;
+
       a {
         text-decoration: none;
         color: $text-color;
         font-size: 1rem;
-        padding: 3px;
+        padding: $common-padding/10;
+
         &:hover {
           color: $active-color;
         }
@@ -74,37 +84,35 @@ header {
 }
 
 .main-menu {
+
+  .menu {
+    display: none;
+  }
+
   button.menu {
     display: inline-block;
     float: right;
     border: 1px solid $text-color;
     border-radius: 3px;
     background: none;
-    padding: 8px 13px;
-    margin-right: 15px;
+    padding: $common-padding/3 $common-padding/2;
+    margin-right: $common-padding/2;
   }
-}
 
-.main-menu {
   .small-menu {
     text-align: right;
-    margin-right: 15px;
-    margin-top: 14px;
+    margin-right: $common-padding/2;
+    margin-top: $common-padding/2;
     border-top: 1px solid $text-color;
   }
 }
 
 .small-menu {
+
   .small-menu--menu {
     display: inline-block;
     padding-left: 0;
     float: left;
-  }
-}
-
-.main-menu {
-  .menu {
-    display: none;
   }
 }
 
@@ -114,15 +122,40 @@ header {
 
 .icons {
   display: none;
-  margin-top: 12px;
+  margin-top: $common-padding/3;
+
   .icon {
     display: inline-block;
     font-size: 1.4rem;
+
     a {
       text-decoration: none;
       color: $text-color;
-      padding: 10px;
+      padding: $common-padding/3;
     }
+  }
+}
+
+.menus {
+  text-align: center;
+}
+
+.menu-information {
+  font-size: 0.9rem;
+  border-bottom: 1px solid $text-color;
+  padding: 0 $common-padding/2;
+
+  .menu-img {
+    padding-top: $common-padding;
+  }
+
+  .double-line {
+    margin: auto;
+  }
+
+  a {
+    text-decoration: none;
+    color: $text-color;
   }
 }
 
@@ -130,20 +163,24 @@ header {
   position: relative;
   text-align: center;
   width: 100%;
+
   video {
     width: 100%;
     display: block;
   }
+
   .title {
     position: absolute;
     top: 0;
     color: white;
     text-transform: uppercase;
+
     font: {
       family: $additional-font-family;
       size: 4vw;
     }
   }
+
   .double-line {
     position: absolute;
     top: 0;
@@ -176,80 +213,94 @@ h1 {
 
 .information {
   font-size: 0.9rem;
-  padding: 20px;
+  padding: $common-padding/2;
+
   p {
-    padding-top: 15px;
+    padding-top: $common-padding/2;
   }
 }
 
-
-
-@media screen and (min-width: 768px)and (max-width: 853px){
-  .menu-information {
-    font-size: 1.9vw;
-  }
-}
+//@media screen and (min-width: 768px)and (max-width: 853px){
+//  .menu-information {
+//    font-size: 1.1rem;
+//  }
+//}
 
 @media screen and (min-width: 768px) {
 
-.main-menu {
-  .menu {
-    display: inline-block;
-  }
-  ul {
-    padding-left: 62px;
-    li {
-      a {
-        padding: 12px;
+  .main-menu {
+
+    .menu {
+      display: inline-block;
+    }
+
+    ul {
+      padding-left: $common-padding*2;
+
+      li {
+
+        a {
+          padding: $common-padding/2;
+        }
       }
     }
   }
-}
+
   .icons {
     display: inline-block;
     float: right;
   }
-  #video-container {
 
+  #video-container {
     max-height: 850px;
     overflow: hidden;
+
     .title {
       font-size: 3vw;
     }
   }
+
   .main-menu {
+
     button.menu {
       display: none;
     }
+
     .small-menu {
       border-color: transparent;
     }
   }
+
   .small-menu {
+
     .small-menu--menu,
     .small-menu--icons {
       display: none;
     }
   }
+
   .container-main-menu {
-    margin-bottom: 30px;
+    margin-bottom: $common-padding;
   }
+
   .restaurant-menu {
     .container {
-
-      padding-top: 90px;
+      padding-top: $common-padding*3;
     }
   }
+
   .information-container {
     height: 600px;
   }
+
   .information {
     font-size: 1.2rem;
     width: 50%;
     max-width: 512px;
-    padding: 100px 0 0 60px;
+    padding: $common-padding*3 0 0 $common-padding*2;
     display: inline-block;
   }
+
   .chef-img {
     background-image: url("https://static.wixstatic.com/media/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg/v1/fill/w_1066,h_682,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_a5a164acd00a4ae7940be550e4915303.webp");
     width: 50%;
@@ -259,40 +310,51 @@ h1 {
     display: inline-block;
     float: left;
   }
+
   .restaurant-menu {
     background-image: url("https://static.wixstatic.com/media/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.jpg/v1/fill/w_1863,h_828,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.webp");
     background-size: cover;
     height: 800px;
     width: 100%;
   }
+
   .menus {
     text-align: center;
   }
+
   .menu-information {
+    border-color: transparent;
+    font-size: 1.1rem;
     display: inline-block;
     background-color: white;
     width: 30%;
     text-align: center;
-    margin: 11px;
+    margin: $common-padding/3;
+
     img {
       height: 185px;
     }
+
     a {
       text-decoration: none;
       color: $text-color;
     }
+
     .double-line {
       margin: auto;
     }
-    h1 {
-      padding: 0 60px 0 60px;
+
+    h2:last-child {
+      padding: 0 $common-padding*2;
     }
+
     p {
-      padding-top: 30px;
+      padding-top: $common-padding;
     }
   }
+
   .menu-img {
-    padding-top: 60px;
+    padding-top: $common-padding*2;
   }
 }
 
@@ -301,31 +363,39 @@ h1 {
     .menu {
       display: inline-block;
     }
+
     ul {
-      padding-left: 62px;
+      padding-left: $common-padding*2;
+
       li {
+
         a {
-          padding: 12px;
+          padding: $common-padding/3;
         }
       }
     }
   }
+
   .small-menu {
     .small-menu--menu {
       display: none;
     }
   }
+
   .main-menu {
     button.menu {
-      margin-top: 7px;
+      margin-top: $common-padding/3;
     }
   }
+
   .container {
     margin-bottom: 0;
   }
+
   .container-main-menu {
-    margin-bottom: 30px;
+    margin-bottom: $common-padding;
   }
+
   .chef-img {
     background-image: url("https://static.wixstatic.com/media/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg/v1/fill/w_1066,h_682,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_a5a164acd00a4ae7940be550e4915303.webp");
     height: 330px;
@@ -334,28 +404,35 @@ h1 {
 
   .information {
     font-size: 1.2rem;
-    padding: 30px;
+    padding: $common-padding;
+
     p {
-      padding-top: 30px;
+      padding-top: $common-padding;
     }
   }
+
   .menus {
     text-align: center;
   }
+
   .menu-information {
-    padding: 0 90px;
-    margin: 10px;
+    font-size: 1.2rem;
+    padding: 0 $common-padding*3;
+    margin: $common-padding/3;
     border-bottom: 1px solid $text-color;
+
     .double-line {
       margin: auto;
     }
+
     a {
       text-decoration: none;
       color: $text-color;
     }
   }
+
   .menu-img {
-    padding-top: 30px;
+    padding-top: $common-padding;
   }
 }
 
@@ -365,6 +442,9 @@ h1 {
     height: 280px;
     background-size: cover;
   }
-  .information {
+
+  .menu-information {
+    border-bottom: 1px solid $text-color;
+    font-size: 1.2rem;
   }
 }
