--- a/sass/main.css
+++ b/sass/main.css
@@ -139,13 +139,29 @@ h1 {
   height: 200px;
   background-size: cover; }
 
-.information {
+.about {
   font-size: 0.9rem;
   padding: 15px; }
-  .information p {
+  .about p {
     padding-top: 15px; }
 
-@media screen and (min-width: 768px) {
+.second-menu {
+  text-align: center;
+  padding: 0 15px; }
+  .second-menu .double-line {
+    margin: 15px auto; }
+  .second-menu h2 {
+    margin: 30px 0 0 0; }
+  .second-menu p {
+    font-size: 1rem;
+    margin: 5px; }
+  .second-menu button {
+    border: 1px solid #2F2E2E;
+    background: none;
+    padding: 10px 30px;
+    margin: 15px 0; }
+
+@media screen and (min-width: 769px) {
   .main-menu .menu {
     display: inline-block; }
   .main-menu ul {
@@ -175,13 +191,13 @@ h1 {
   .container-main-menu {
     margin-bottom: 30px; }
 
-  .restaurant-menu .container {
+  .restaurant-menus .container {
     padding-top: 90px; }
 
-  .information-container {
+  .about-container {
     height: 600px; }
 
-  .information {
+  .about {
     font-size: 1.2rem;
     width: 50%;
     max-width: 512px;
@@ -197,7 +213,7 @@ h1 {
     display: inline-block;
     float: left; }
 
-  .restaurant-menu {
+  .restaurant-menus {
     background-image: url("https://static.wixstatic.com/media/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.jpg/v1/fill/w_1863,h_828,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.webp");
     background-size: cover;
     height: 800px;
@@ -221,14 +237,41 @@ h1 {
       color: #2F2E2E; }
     .menu-information .double-line {
       margin: auto; }
-    .menu-information h2:last-child {
+    .menu-information h3:last-child {
       padding: 0 60px; }
     .menu-information p {
       padding-top: 30px; }
 
   .menu-img {
-    padding-top: 60px; } }
-@media screen and (min-width: 600px) and (max-width: 768px) {
+    padding-top: 60px; }
+
+  .second-menu {
+    background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_1863,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.webp");
+    text-align: center;
+    overflow: hidden;
+    padding-top: 90px; }
+    .second-menu .container {
+      width: 475px; }
+    .second-menu button {
+      background: none;
+      border: 1px solid #2F2E2E;
+      padding: 15px 30px;
+      margin: 60px 0; }
+    .second-menu .second-menu-information {
+      background-color: white; }
+      .second-menu .second-menu-information h2 {
+        padding-top: 90px;
+        font-size: 2.2rem; }
+      .second-menu .second-menu-information p {
+        margin: 5px;
+        font-size: 1rem; }
+      .second-menu .second-menu-information h3 {
+        padding: 0 90px; }
+    .second-menu .double-line {
+      margin: 30px auto; }
+    .second-menu .second-menu-img {
+      display: none; } }
+@media screen and (min-width: 601px) and (max-width: 768px) {
   .main-menu .menu {
     display: inline-block; }
   .main-menu ul {
@@ -253,10 +296,10 @@ h1 {
     height: 330px;
     background-size: cover; }
 
-  .information {
+  .about {
     font-size: 1.2rem;
     padding: 30px; }
-    .information p {
+    .about p {
       padding-top: 30px; }
 
   .menus {
@@ -274,7 +317,25 @@ h1 {
       color: #2F2E2E; }
 
   .menu-img {
-    padding-top: 30px; } }
+    padding-top: 30px; }
+
+  .second-menu {
+    text-align: center; }
+    .second-menu button {
+      background: none;
+      border: 1px solid #2F2E2E;
+      padding: 15px 30px;
+      margin: 30px 0; }
+    .second-menu .double-line {
+      margin: 30px auto; }
+    .second-menu .second-menu-information p {
+      font-size: 0.9rem;
+      margin: 5px; }
+
+  .second-menu-img {
+    background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_980,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.webp");
+    background-size: cover;
+    height: 500px; } }
 @media screen and (min-width: 440px) and (max-width: 600px) {
   .chef-img {
     background-image: url("https://static.wixstatic.com/media/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg/v1/fill/w_1066,h_682,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_a5a164acd00a4ae7940be550e4915303.webp");
