--- a/sass/main.css
+++ b/sass/main.css
@@ -146,8 +146,9 @@ h1 {
     padding-top: 15px; }
 
 .second-menu {
-  text-align: center;
-  padding: 0 15px; }
+  text-align: center; }
+  .second-menu .second-menu-information {
+    padding: 0 15px; }
   .second-menu .double-line {
     margin: 15px auto; }
   .second-menu h2 {
@@ -160,6 +161,11 @@ h1 {
     background: none;
     padding: 10px 30px;
     margin: 15px 0; }
+
+.second-menu-img {
+  background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_320,h_267,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.webp");
+  background-size: cover;
+  height: 300px; }
 
 @media screen and (min-width: 769px) {
   .main-menu .menu {
