--- a/sass/main.css
+++ b/sass/main.css
@@ -186,6 +186,39 @@ img.quotation {
   width: 50px;
   margin: 30px; }
 
+.review-image img {
+  width: 100%; }
+
+.contact {
+  text-align: center;
+  padding: 15px; }
+  .contact .double-line {
+    margin: 30px auto; }
+  .contact p {
+    font-size: 0.9rem; }
+  .contact h3 {
+    font-size: 1.1rem;
+    padding: 0 60px; }
+
+#personal-details input,
+#personal-details textarea {
+  display: block;
+  margin: 6px auto;
+  padding: 3px; }
+#personal-details textarea {
+  padding-right: 30px; }
+#personal-details button {
+  background-color: black;
+  border: none;
+  color: white;
+  font-size: 0.9rem;
+  padding: 6px;
+  margin-top: 0; }
+#personal-details input[type=text],
+#personal-details input[type=email],
+#personal-details textarea {
+  width: 300px; }
+
 @media screen and (min-width: 769px) {
   .main-menu .menu {
     display: inline-block; }
@@ -304,7 +337,7 @@ img.quotation {
     text-align: center;
     font-size: 1.5rem; }
     .review .container {
-      padding-top: 180px; }
+      padding-top: 120px; }
     .review p {
       font-size: 1rem; }
     .review h2, .review p {
@@ -319,7 +352,57 @@ img.quotation {
     margin: 30px; }
 
   img.quotation {
-    margin-bottom: 30px; } }
+    margin-bottom: 30px; }
+
+  .review-image {
+    background-image: url("https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_1863,h_666,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.webp");
+    height: 664px; }
+    .review-image img {
+      display: none; }
+
+  .contact {
+    text-align: center;
+    font-family: "Old Standard TT", serif;
+    padding: 15px;
+    margin-top: 120px;
+    margin-bottom: 120px; }
+    .contact .double-line {
+      margin: 30px auto; }
+    .contact h2 {
+      font-size: 3.3rem;
+      font-weight: normal;
+      margin: 0; }
+    .contact p {
+      font-size: 1rem;
+      font-family: Muli, sans-serif; }
+    .contact h3 {
+      font-weight: normal;
+      padding: 0 180px;
+      margin-bottom: 30px; }
+
+  #personal-details input,
+  #personal-details textarea,
+  #personal-details button {
+    display: block;
+    margin: 6px auto;
+    padding: 3px;
+    font-size: 1.2rem;
+    border: 1px solid #2F2E2E; }
+  #personal-details ::placeholder {
+    color: lightgrey; }
+  #personal-details textarea {
+    padding-right: 6px; }
+  #personal-details button {
+    background-color: black;
+    color: white;
+    font-size: 1rem;
+    padding: 6px;
+    margin-top: 0;
+    margin-left: calc(50% + 208px); }
+  #personal-details input[type=text],
+  #personal-details input[type=email],
+  #personal-details textarea {
+    width: inherit; } }
 @media screen and (min-width: 601px) and (max-width: 768px) {
   .main-menu .menu {
     display: inline-block; }
@@ -384,7 +467,42 @@ img.quotation {
   .second-menu-img {
     background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_980,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.webp");
     background-size: cover;
-    height: 500px; } }
+    height: 500px; }
+
+  .review-image img {
+    width: 100%; }
+
+  .contact {
+    text-align: center;
+    margin: 30px 0; }
+    .contact .double-line {
+      margin: 30px auto; }
+    .contact p {
+      font-size: 0.9rem; }
+    .contact h3 {
+      padding: 0 90px;
+      font-size: 1.1rem; }
+
+  #personal-details input,
+  #personal-details textarea {
+    display: block;
+    margin: 6px auto;
+    padding: 3px; }
+  #personal-details textarea {
+    padding-right: 30px; }
+  #personal-details ::placeholder {
+    color: lightgrey; }
+  #personal-details button {
+    background-color: black;
+    border: none;
+    color: white;
+    font-size: 0.9rem;
+    padding: 6px;
+    margin-top: 0; }
+  #personal-details input[type=text],
+  #personal-details input[type=email],
+  #personal-details textarea {
+    width: inherit; } }
 @media screen and (min-width: 440px) and (max-width: 600px) {
   .chef-img {
     background-image: url("https://static.wixstatic.com/media/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg/v1/fill/w_1066,h_682,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_a5a164acd00a4ae7940be550e4915303.webp");
@@ -393,6 +511,11 @@ img.quotation {
 
   .menu-information {
     border-bottom: 1px solid #2F2E2E;
-    font-size: 1.2rem; } }
+    font-size: 1.2rem; }
+
+  #personal-details input[type=text],
+  #personal-details input[type=email],
+  #personal-details textarea {
+    width: 340px; } }
 
 /*# sourceMappingURL=main.css.map */
