--- a/sass/main.scss
+++ b/sass/main.scss
@@ -136,6 +136,35 @@ header {
   }
 }
 
+.title-container {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+
+  .title {
+    color: white;
+    font: {
+      family: $additional-font-family;
+      size: 1.1rem;
+    }
+    text-transform: uppercase;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    .double-line {
+      border-color: white;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      margin-top: $common-padding/2;
+    }
+  }
+
+}
+
 .menus {
   text-align: center;
 }
@@ -167,24 +196,6 @@ header {
   video {
     width: 100%;
     display: block;
-  }
-
-  .title {
-    position: absolute;
-    top: 0;
-    color: white;
-    text-transform: uppercase;
-
-    font: {
-      family: $additional-font-family;
-      size: 4vw;
-    }
-  }
-
-  .double-line {
-    position: absolute;
-    top: 0;
-    border-color: white;
   }
 }
 
@@ -359,9 +370,12 @@ img.quotation {
   #video-container {
     max-height: 850px;
     overflow: hidden;
+    position: relative;
+  }
 
+  .title-container {
     .title {
-      font-size: 3vw;
+      font-size: 2.5rem
     }
   }
 
@@ -611,6 +625,12 @@ img.quotation {
     }
   }
 
+  .bx-wrapper {
+    border: none;
+
+    .bx-pager {
+    }
+  }
 }
 
 @media screen and (min-width: 601px) and (max-width: 768px) {
@@ -649,6 +669,12 @@ img.quotation {
 
   .container-main-menu {
     margin-bottom: $common-padding;
+  }
+
+  .title-container {
+    .title {
+      font-size: 1.8rem
+    }
   }
 
   .chef-img {
@@ -784,6 +810,12 @@ img.quotation {
   .menu-information {
     border-bottom: 1px solid $text-color;
     font-size: 1.2rem;
+  }
+
+  .title-container {
+    .title {
+      font-size: 1.5rem
+    }
   }
 
   #personal-details {
